--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <div id="loading"></div>
 
     <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle pad-sm"
-      ><i class="fa fa-bars"></i
-    ></a>
+    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle pad-sm">
+      <img src="images/ham-ico-1.png" alt="menu toggle icon" />
+    </a>
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li>
@@ -47,8 +47,9 @@
             id="menu-close"
             href="#"
             class="btn btn-light btn-lg pull-right toggle pad-sm"
-            ><i class="fa fa-times"></i
-          ></a>
+          >
+            <img src="images/close.png" alt="close icon" />
+          </a>
         </li>
         <li class="sidebar-brand">
           <a href="#top" onclick="$('#menu-close').click()">Vinodh Kumar</a>
@@ -139,7 +140,7 @@
           <div class="col-lg-6 col-sm-6">
             <h2 class="lines">about</h2>
             <h3 class="subtitle">Who I am</h3>
-            <p class="mgb50">
+            <p>
               A versatile front-end web developer skilled at responsive design,
               I ensure the creation of sites optimized for viewing across all
               devices. Making things right is a time consuming process, but it's
@@ -329,7 +330,7 @@
                           href="https://www.internetacademy.co.in"
                           target="_blank"
                           class="linkout"
-                          >Internet Academy</a
+                          >Internet Academy (W3C Member)</a
                         >
                       </h3>
                       <h4>Front-end Developer and Instructor</h4>
@@ -414,7 +415,9 @@
                     </div>
                     <div class="exp-head">
                       <p class="time-frame">2016</p>
-                      <h3 style="color: #828282">Internet Academy</h3>
+                      <h3 style="color: #828282">
+                        Internet Academy (W3C Member)
+                      </h3>
                       <h4>Graphic Design and Web-Development</h4>
                     </div>
                     <div class="specialisation">
@@ -528,9 +531,10 @@
           </div>
         </div>
       </div>
-      <a id="to-top" href="#top" class="btn btn-dark btn-lg"
-        ><i class="fa fa-chevron-up fa-fw fa-1x"></i
-      ></a>
+      <a id="to-top" href="#top" class="btn btn-dark btn-lg">
+        <!-- <i class="fa fa-chevron-up fa-fw fa-1x"></i> -->
+        <img src="images/arrow-up.png" alt="arrow-up" />
+      </a>
     </footer>
 
     <!-- jQuery -->
