--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       property="og:image"
-      content="https://mvk-vinodhkumar.github.io/portfolio/favicon.png"
+      content="https://mvk-vinodhkumar.github.io/portfolio/images/thumbnail.png"
     />
     <meta
       property="og:url"
@@ -26,7 +26,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://mvk-vinodhkumar.github.io/portfolio/favicon.png"
+      content="https://mvk-vinodhkumar.github.io/portfolio/images/thumbnail.png"
     />
     <meta name="twitter:site" content="" />
     <meta name="twitter:creator" content="" />
