meta data changes

--- a/index.html
+++ b/index.html
@@ -4,33 +4,16 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
+    <link rel="canonical" href="https://mvk-vinodhkumar.github.io/portfolio/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Vinodh Kumar - UI Developer" />
-    <meta
-      property="og:description"
-      content="Based out of Bengaluru, India. If you're a business seeking a web presence or an employer looking to hire, contact me."
-    />
     <meta
       property="og:image"
       content="https://mvk-vinodhkumar.github.io/portfolio/images/thumbnail.png"
     />
     <meta
-      property="og:url"
-      content="https://mvk-vinodhkumar.github.io/portfolio/"
-    />
-    <meta property="og:site_name" content="Vinodh Kumar - UI Developer" />
-    <meta name="twitter:title" content="Vinodh Kumar - UI Developer" />
-    <meta
-      name="twitter:description"
-      content="Based out of Bengaluru, India. If you're a business seeking a web presence or an employer looking to hire, contact me."
-    />
-    <meta
-      name="twitter:image"
+      property="twitter:image"
       content="https://mvk-vinodhkumar.github.io/portfolio/images/thumbnail.png"
     />
-    <meta name="twitter:site" content="" />
-    <meta name="twitter:creator" content="" />
-    <meta name="category" content="Portfolio" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vinodh | UI Developer</title>
