--- a/index.html
+++ b/index.html
@@ -3,18 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    <link rel="canonical" href="https://mvk-vinodhkumar.github.io/portfolio/" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://mvk-vinodhkumar.github.io/portfolio/thumbnail.png"
-    />
-    <meta
-      property="twitter:image"
-      content="https://mvk-vinodhkumar.github.io/portfolio/thumbnail.png"
-    />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vinodh | UI Developer</title>
     <meta
@@ -26,6 +14,18 @@
       content="ui developer portfolio site, web designer portfolio, webdesigner portfolio website, web developer, webdeveloper, front end developer, front end developer portfolio"
     />
     <link rel="icon" href="favicon.png" type="image/png" />
+
+    <link rel="canonical" href="https://mvk-vinodhkumar.github.io/portfolio/" />
+    <meta property="og:type" content="Website" />
+    <meta
+      property="og:image"
+      content="https://mvk-vinodhkumar.github.io/portfolio/thumbnail.png"
+    />
+    <meta
+      property="twitter:image"
+      content="https://mvk-vinodhkumar.github.io/portfolio/thumbnail.png"
+    />
+
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -509,8 +509,8 @@
             <h2 class="lines">thanks for visiting!</h2>
             <h3 class="subtitle">Let's stay connected!</h3>
 
-            <a href="mailto:mvk.vinodhkumar@gmail" id="mailid"
-              >mvk.vinodhkumar@gmail</a
+            <a href="mailto:mvk.vinodhkumar@gmail.com" id="mailid"
+              >mvk.vinodhkumar@gmail.com</a
             >
 
             <ul id="social">
