Home page changes

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                     </div>
                     <div class="exp-head">
                       <p class="time-frame">2008 - 2010</p>
-                      <h3 style="color: #828282">St. Joseph's College</h3>
+                      <h3>St. Joseph's College</h3>
                       <h4>Computer Science</h4>
                     </div>
                     <div class="specialisation">
@@ -370,9 +370,7 @@
                     </div>
                     <div class="exp-head">
                       <p class="time-frame">2010 - 2014</p>
-                      <h3 style="color: #828282">
-                        HKBK College of Engineering
-                      </h3>
+                      <h3>HKBK College of Engineering</h3>
                       <h4>Computer Science &amp; Engineering</h4>
                     </div>
                     <div class="specialisation">
@@ -398,9 +396,7 @@
                     </div>
                     <div class="exp-head">
                       <p class="time-frame">2016</p>
-                      <h3 style="color: #828282">
-                        Internet Academy (W3C Member)
-                      </h3>
+                      <h3>Internet Academy (W3C Member)</h3>
                       <h4>Graphic Design and Web-Development</h4>
                     </div>
                     <div class="specialisation">
@@ -418,9 +414,7 @@
                     </div>
                     <div class="exp-head">
                       <p class="time-frame">2015</p>
-                      <h3 style="color: #828282">
-                        MindSculptor Systems Pvt. Ltd.
-                      </h3>
+                      <h3>MindSculptor Systems Pvt. Ltd.</h3>
                       <h4>Software for Embedded Systems</h4>
                     </div>
                     <div class="specialisation">
@@ -445,9 +439,7 @@
                     </div>
                     <div class="exp-head">
                       <p class="time-frame">2016</p>
-                      <h3 style="color: #828282">
-                        Best Instructor of the Month
-                      </h3>
+                      <h3>Best Instructor of the Month</h3>
                       <h4>At Internet Academy</h4>
                     </div>
                   </div>
@@ -455,11 +447,15 @@
               </div>
 
               <!-- Resume -->
-              <div class="col-lg-12 col-sm-12" style="text-align: center">
-                <a href="#" class="btn" id="resume"
+              <!-- <div class="col-lg-12 col-sm-12" style="text-align: center">
+                <a
+                  href="files/vinodh-kumar-resume.pdf"
+                  class="btn"
+                  id="resume"
+                  download
                   >My Resume<i class="fa fa-download"></i
                 ></a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -506,8 +502,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="lines">thanks for visiting!</h2>
-            <h3 class="subtitle">Let's stay connected!</h3>
+            <h2 class="lines">thanks for visiting</h2>
+            <h3 class="subtitle">Let's stay connected</h3>
 
             <a href="mailto:mvk.vinodhkumar@gmail.com" id="mailid"
               >mvk.vinodhkumar@gmail.com</a
