Updated Awards and Certifications

--- a/index.html
+++ b/index.html
@@ -388,62 +388,13 @@
               <!-- Certifications -->
               <div class="col-lg-6 col-sm-6">
                 <h3 class="credentials">certifications</h3>
-                <div class="timeline-wrap">
-                  <!-- Certification 1 -->
-                  <div class="timeline-block sht">
-                    <div class="timeline-icon">
-                      <i class="fa-mine fa fa-certificate"></i>
-                    </div>
-                    <div class="exp-head">
-                      <p class="time-frame">2016</p>
-                      <h3>Internet Academy (W3C Member)</h3>
-                      <h4>Graphic Design and Web-Development</h4>
-                    </div>
-                    <div class="specialisation">
-                      <p>
-                        Successfully completed an Internship program<br />at
-                        Internet Academy.
-                      </p>
-                    </div>
-                  </div>
-
-                  <!-- Certification 2 -->
-                  <div class="timeline-block sht">
-                    <div class="timeline-icon">
-                      <i class="fa-mine fa fa-certificate"></i>
-                    </div>
-                    <div class="exp-head">
-                      <p class="time-frame">2015</p>
-                      <h3>MindSculptor Systems Pvt. Ltd.</h3>
-                      <h4>Software for Embedded Systems</h4>
-                    </div>
-                    <div class="specialisation">
-                      <p>
-                        Successfully completed a course on
-                        <q>Software for Embedded Systems</q> at MindSculptor
-                        Systems Pvt. Ltd.
-                      </p>
-                    </div>
-                  </div>
-                </div>
+                <div class="timeline-wrap" id="cert-wrap"></div>
               </div>
 
               <!-- Awards -->
               <div class="col-lg-6 col-sm-6">
                 <h3 class="credentials">awards</h3>
-                <div class="timeline-wrap">
-                  <!-- Award one -->
-                  <div class="timeline-block">
-                    <div class="timeline-icon">
-                      <i class="fa-mine fa fa-shield"></i>
-                    </div>
-                    <div class="exp-head">
-                      <p class="time-frame">2016</p>
-                      <h3>Best Instructor of the Month</h3>
-                      <h4>At Internet Academy</h4>
-                    </div>
-                  </div>
-                </div>
+                <div class="timeline-wrap" id="awards-wrap"></div>
               </div>
 
               <!-- Resume -->
@@ -557,7 +508,7 @@
     <script src="js/lettering.min.js"></script>
     <!-- Custom script -->
     <script src="js/index.js"></script>
-    <script src="js/works.js"></script>
+    <script src="js/data.js"></script>
 
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
