updated toolkit and images

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Custom Stylesheet -->
-    <link href="css/main.css" rel="stylesheet" />
+    <link href="css/main.css?v1" rel="stylesheet" />
   </head>
 
   <body>
@@ -255,10 +255,10 @@
                 <li>
                   Figma, InVision, Adobe XD, Adobe Photoshop, Adobe Illustrator
                 </li>
-                <li>Git, Github</li>
+                <li>Git, GitBash, GitHub, GitLab</li>
                 <li>XAMPP</li>
-                <li>Fiddler</li>
-                <li>Tawk, Drift</li>
+                <li>Fiddler, Proto, Principle, MJML</li>
+                <li>Pine tools, Tawk, Drift</li>
                 <li>Pingdom, GTmetrix, Google Analytics</li>
                 <li>Teams, Slack, Trello</li>
                 <li>MS Office Suite, Google Docs</li>
