Full-page navigation glitch fixed

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Preloader -->
     <div id="loading"></div>
 
-    <!-- Navigation -->
+    <!-- Full page nav - Navigation -->
     <div class="menu-icon-wrap">
       <div class="menu-icon">
         <span class="menu-icon__line menu-icon__line-left"></span>
@@ -54,15 +54,14 @@
         <span class="menu-icon__line menu-icon__line-right"></span>
       </div>
     </div>
-
-    <div class="full_nav">
-      <div class="full_nav__content">
-        <ul class="full_nav__list">
-          <li class="full_nav__list-item" data-link="#top">Home</li>
-          <li class="full_nav__list-item" data-link="#about">About</li>
-          <li class="full_nav__list-item" data-link="#skills">Skills</li>
-          <li class="full_nav__list-item" data-link="#history">History</li>
-          <li class="full_nav__list-item" data-link="#portfolio">Works</li>
+    <div class="nav">
+      <div class="nav__content">
+        <ul class="nav__list">
+          <li class="nav__list-item" data-link="#top">Home</li>
+          <li class="nav__list-item" data-link="#about">About</li>
+          <li class="nav__list-item" data-link="#skills">Skills</li>
+          <li class="nav__list-item" data-link="#history">History</li>
+          <li class="nav__list-item" data-link="#portfolio">Works</li>
         </ul>
       </div>
     </div>
