My works section updated

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Custom Stylesheet -->
-    <link href="css/main.css?v1" rel="stylesheet" />
+    <link href="css/main.css?v2" rel="stylesheet" />
   </head>
 
   <body>
@@ -506,8 +506,8 @@
     <!-- uideveloper -->
     <script src="js/lettering.min.js"></script>
     <!-- Custom script -->
-    <script src="js/index.js"></script>
-    <script src="js/data.js"></script>
+    <script src="js/index.js?v1"></script>
+    <script src="js/data.js?v1"></script>
 
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
